change names and add readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-constant-handler",
-  "version": "0.0.3",
+  "version": "0.1.4",
   "description": "react hooks useConstant ans useHandler",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -22,15 +22,12 @@
   "keywords": [
     "react",
     "hook",
-    "hotkey",
-    "hotkeys",
-    "hot",
-    "key",
-    "keys",
-    "path",
-    "use",
-    "useHotKey",
-    "HotKey"
+    "useConstant",
+    "useConstFunction",
+    "useConstFunc",
+    "useConstHandler",
+    "use constant function",
+    "use constant handler"
   ],
   "author": "simprl",
   "license": "MIT",
